--- a/Etsy InfiniSearch/Etsy InfiniSearch/Base.lproj/Main.storyboard
+++ b/Etsy InfiniSearch/Etsy InfiniSearch/Base.lproj/Main.storyboard
@@ -16,9 +16,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="B1Y-t6-5Ig">
+                            <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="B1Y-t6-5Ig">
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.92156862745098034" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="2" id="uH5-qk-Luf">
                                     <size key="itemSize" width="146" height="170"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -34,19 +35,20 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rdw-lX-Jfc">
-                                                    <rect key="frame" x="0.0" y="0.0" width="146" height="170"/>
+                                                    <rect key="frame" x="5" y="5" width="136" height="145"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nxc-9s-VAt">
-                                                    <rect key="frame" x="20" y="138" width="106" height="21"/>
+                                                    <rect key="frame" x="5" y="149" width="136" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="listingImage" destination="rdw-lX-Jfc" id="omy-5R-8az"/>
                                             <outlet property="listingLabel" destination="Nxc-9s-VAt" id="GD1-8w-8cz"/>
@@ -54,13 +56,22 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8R4-4b-Zl3">
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="8R4-4b-Zl3">
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8R4-4b-Zl3" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="0mr-Sf-IYE"/>
+                            <constraint firstItem="8R4-4b-Zl3" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="AO0-Ve-REe"/>
+                            <constraint firstItem="B1Y-t6-5Ig" firstAttribute="top" secondItem="8R4-4b-Zl3" secondAttribute="bottom" id="BHO-Iq-0vn"/>
+                            <constraint firstAttribute="trailing" secondItem="8R4-4b-Zl3" secondAttribute="trailing" id="MA1-o1-bsv"/>
+                            <constraint firstItem="B1Y-t6-5Ig" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="MXL-a5-Qcf"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="B1Y-t6-5Ig" secondAttribute="bottom" id="NeT-Tw-7Sf"/>
+                            <constraint firstAttribute="trailing" secondItem="B1Y-t6-5Ig" secondAttribute="trailing" id="yuE-S9-z6x"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="etsySearchBar" destination="8R4-4b-Zl3" id="y35-rn-Wix"/>
