--- a/Etsy InfiniSearch/Etsy InfiniSearch/Base.lproj/Main.storyboard
+++ b/Etsy InfiniSearch/Etsy InfiniSearch/Base.lproj/Main.storyboard
@@ -56,6 +56,27 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q7T-Xa-xqp" customClass="LoadMoreView">
+                                <rect key="frame" x="0.0" y="568" width="320" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="H8A-Dc-Ife">
+                                        <rect key="frame" x="150" y="10" width="20" height="20"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="H8A-Dc-Ife" firstAttribute="leading" secondItem="q7T-Xa-xqp" secondAttribute="leading" constant="150" id="EAr-a5-ILR"/>
+                                    <constraint firstAttribute="height" constant="40" id="N85-C2-HMS"/>
+                                    <constraint firstItem="H8A-Dc-Ife" firstAttribute="top" secondItem="q7T-Xa-xqp" secondAttribute="top" constant="10" id="Q7T-az-96g"/>
+                                    <constraint firstAttribute="bottom" secondItem="H8A-Dc-Ife" secondAttribute="bottom" constant="10" id="YZ2-Br-naL"/>
+                                    <constraint firstAttribute="trailing" secondItem="H8A-Dc-Ife" secondAttribute="trailing" constant="150" id="gvl-4p-56L"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="spinner" destination="H8A-Dc-Ife" id="Tnd-OW-nGQ"/>
+                                </connections>
+                            </view>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="8R4-4b-Zl3">
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -66,21 +87,27 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="8R4-4b-Zl3" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="0mr-Sf-IYE"/>
+                            <constraint firstAttribute="bottom" secondItem="q7T-Xa-xqp" secondAttribute="bottom" constant="-40" id="4Le-0M-oyg"/>
+                            <constraint firstItem="q7T-Xa-xqp" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="5PG-HC-xtl"/>
+                            <constraint firstItem="q7T-Xa-xqp" firstAttribute="top" secondItem="2fi-mo-0CV" secondAttribute="bottom" id="7zw-A7-SCM"/>
                             <constraint firstItem="8R4-4b-Zl3" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="AO0-Ve-REe"/>
                             <constraint firstItem="B1Y-t6-5Ig" firstAttribute="top" secondItem="8R4-4b-Zl3" secondAttribute="bottom" id="BHO-Iq-0vn"/>
                             <constraint firstAttribute="trailing" secondItem="8R4-4b-Zl3" secondAttribute="trailing" id="MA1-o1-bsv"/>
                             <constraint firstItem="B1Y-t6-5Ig" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="MXL-a5-Qcf"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="B1Y-t6-5Ig" secondAttribute="bottom" id="NeT-Tw-7Sf"/>
+                            <constraint firstAttribute="trailing" secondItem="q7T-Xa-xqp" secondAttribute="trailing" id="c3A-hP-CL3"/>
                             <constraint firstAttribute="trailing" secondItem="B1Y-t6-5Ig" secondAttribute="trailing" id="yuE-S9-z6x"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="etsySearchBar" destination="8R4-4b-Zl3" id="y35-rn-Wix"/>
+                        <outlet property="loadMoreView" destination="q7T-Xa-xqp" id="LHs-2g-8Qz"/>
                         <outlet property="searchResultsCollectionView" destination="B1Y-t6-5Ig" id="rj6-CI-G2x"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="130" y="84"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
