Fixed UIImage memory link
Store the URL of the specified listing image in the data structure to
avoid unneccesary memory usage.

--- a/Etsy InfiniSearch/Etsy InfiniSearch/Base.lproj/Main.storyboard
+++ b/Etsy InfiniSearch/Etsy InfiniSearch/Base.lproj/Main.storyboard
@@ -34,10 +34,6 @@
                                             <rect key="frame" x="0.0" y="0.0" width="146" height="170"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rdw-lX-Jfc">
-                                                    <rect key="frame" x="0.0" y="0.0" width="146" height="150"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                </imageView>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nxc-9s-VAt">
                                                     <rect key="frame" x="5" y="149" width="136" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -45,12 +41,16 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jPS-It-Nxm">
+                                                    <rect key="frame" x="0.0" y="0.0" width="146" height="150"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
-                                            <outlet property="listingImage" destination="rdw-lX-Jfc" id="omy-5R-8az"/>
+                                            <outlet property="listingImage" destination="jPS-It-Nxm" id="3EW-yF-V0X"/>
                                             <outlet property="listingLabel" destination="Nxc-9s-VAt" id="GD1-8w-8cz"/>
                                         </connections>
                                     </collectionViewCell>
