Added landscape support (Suggestion by Etsy Engineer)
Had to resolve small auto layout issue with sortBar by setting more
constraints, as it was not centered on the screen in landscape.
Fixed code that determines when user is at the bottom of the list to
reflect the changes in numberOfItemsInSection

--- a/Etsy InfiniSearch/Etsy InfiniSearch/Base.lproj/Main.storyboard
+++ b/Etsy InfiniSearch/Etsy InfiniSearch/Base.lproj/Main.storyboard
@@ -34,14 +34,17 @@
                                             <rect key="frame" x="0.0" y="0.0" width="146" height="170"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nxc-9s-VAt">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nxc-9s-VAt">
                                                     <rect key="frame" x="5" y="149" width="136" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="OHA-hm-M6Q"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jPS-It-Nxm">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jPS-It-Nxm">
                                                     <rect key="frame" x="0.0" y="0.0" width="146" height="150"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
@@ -49,6 +52,15 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="jPS-It-Nxm" secondAttribute="bottom" constant="20" id="Dc7-hR-wNC"/>
+                                            <constraint firstAttribute="trailing" secondItem="jPS-It-Nxm" secondAttribute="trailing" id="Iju-TZ-ueJ"/>
+                                            <constraint firstItem="Nxc-9s-VAt" firstAttribute="leading" secondItem="Ymg-Nd-8py" secondAttribute="leading" constant="5" id="P8g-nC-21l"/>
+                                            <constraint firstItem="jPS-It-Nxm" firstAttribute="leading" secondItem="Ymg-Nd-8py" secondAttribute="leading" id="gDN-YO-3Hs"/>
+                                            <constraint firstAttribute="bottom" secondItem="Nxc-9s-VAt" secondAttribute="bottom" id="gdx-tq-xhD"/>
+                                            <constraint firstItem="jPS-It-Nxm" firstAttribute="top" secondItem="Ymg-Nd-8py" secondAttribute="top" id="oyS-Tm-umd"/>
+                                            <constraint firstItem="jPS-It-Nxm" firstAttribute="centerX" secondItem="Nxc-9s-VAt" secondAttribute="centerX" id="xoh-wx-NHG"/>
+                                        </constraints>
                                         <connections>
                                             <outlet property="listingImage" destination="jPS-It-Nxm" id="3EW-yF-V0X"/>
                                             <outlet property="listingLabel" destination="Nxc-9s-VAt" id="GD1-8w-8cz"/>
@@ -83,37 +95,58 @@
                                 <color key="barTintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.92156862750000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UWf-jG-1n2">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UWf-jG-1n2">
                                 <rect key="frame" x="0.0" y="64" width="320" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sort By:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uap-Aa-jnf">
-                                        <rect key="frame" x="85" y="9" width="62" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b8l-PF-pOa">
-                                        <rect key="frame" x="155" y="5" width="114" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Most Recent">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="sortBy:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="a1E-7Q-a5v"/>
-                                        </connections>
-                                    </button>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vrm-i8-fHP">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vrm-i8-fHP">
                                         <rect key="frame" x="177" y="9" width="0.0" height="0.0"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t5t-Iw-TYU">
+                                        <rect key="frame" x="78" y="0.0" width="164" height="40"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sort By:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uap-Aa-jnf">
+                                                <rect key="frame" x="0.0" y="9" width="62" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b8l-PF-pOa">
+                                                <rect key="frame" x="70" y="5" width="94" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Most Recent">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="sortBy:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="a1E-7Q-a5v"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="b8l-PF-pOa" secondAttribute="bottom" constant="5" id="3b6-Kq-cNO"/>
+                                            <constraint firstAttribute="trailing" secondItem="b8l-PF-pOa" secondAttribute="trailing" id="HXJ-Zf-Akb"/>
+                                            <constraint firstItem="b8l-PF-pOa" firstAttribute="leading" secondItem="Uap-Aa-jnf" secondAttribute="trailing" constant="8" symbolic="YES" id="KVF-We-a8N"/>
+                                            <constraint firstAttribute="bottom" secondItem="Uap-Aa-jnf" secondAttribute="bottom" constant="10" id="XLA-BT-ESa"/>
+                                            <constraint firstItem="b8l-PF-pOa" firstAttribute="top" secondItem="t5t-Iw-TYU" secondAttribute="top" constant="5" id="eEb-nS-lXp"/>
+                                            <constraint firstAttribute="width" constant="164" id="fTq-2F-JkU"/>
+                                            <constraint firstItem="Uap-Aa-jnf" firstAttribute="top" secondItem="t5t-Iw-TYU" secondAttribute="top" constant="9" id="p5q-66-BCz"/>
+                                            <constraint firstItem="Uap-Aa-jnf" firstAttribute="leading" secondItem="t5t-Iw-TYU" secondAttribute="leading" id="vRi-su-bI2"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.92156862750000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Vrm-i8-fHP" secondAttribute="trailing" constant="143" id="6Zh-bk-kRt"/>
                                     <constraint firstAttribute="height" constant="40" id="70c-i8-puU"/>
+                                    <constraint firstAttribute="bottom" secondItem="t5t-Iw-TYU" secondAttribute="bottom" id="UHj-6v-XFo"/>
+                                    <constraint firstItem="t5t-Iw-TYU" firstAttribute="top" secondItem="UWf-jG-1n2" secondAttribute="top" id="gDr-OJ-vLr"/>
+                                    <constraint firstAttribute="centerX" secondItem="t5t-Iw-TYU" secondAttribute="centerX" id="nSm-Rg-FUu"/>
+                                    <constraint firstItem="Vrm-i8-fHP" firstAttribute="top" secondItem="UWf-jG-1n2" secondAttribute="top" constant="9" id="wn9-YM-slS"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -135,6 +168,7 @@
                             <constraint firstAttribute="trailing" secondItem="B1Y-t6-5Ig" secondAttribute="trailing" id="yuE-S9-z6x"/>
                         </constraints>
                     </view>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
                         <outlet property="etsySearchBar" destination="8R4-4b-Zl3" id="y35-rn-Wix"/>
                         <outlet property="loadMoreView" destination="q7T-Xa-xqp" id="LHs-2g-8Qz"/>
